feat: добавлены эндпоинты campaign
